ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/AI_Qualification_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_Qualification_Score__c</fullName>
    <description>Carried from Lead. Einstein AI score 0 to 100.</description>
    <label>AI Qualification Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>