ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/AI_Qualification_Tier__c.field-meta.xml
<CustomField>
    <fullName>AI_Qualification_Tier__c</fullName>
    <description>Carried from Lead. Values are Hot Warm Cold or Disqualified.</description>
    <label>AI Qualification Tier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>