ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/AUM_Range__c.field-meta.xml
<CustomField>
    <fullName>AUM_Range__c</fullName>
    <label>AUM Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under $1M</fullName>
            </value>
            <value>
                <fullName>$1M - $10M</fullName>
            </value>
            <value>
                <fullName>$10M - $50M</fullName>
            </value>
            <value>
                <fullName>$50M - $100M</fullName>
            </value>
            <value>
                <fullName>$100M - $500M</fullName>
            </value>
            <value>
                <fullName>$500M - $1B</fullName>
            </value>
            <value>
                <fullName>Over $1B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>