ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason__c</fullName>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Won - Strong Relationship</fullName>
            </value>
            <value>
                <fullName>Won - Best Price</fullName>
            </value>
            <value>
                <fullName>Won - Product Fit</fullName>
            </value>
            <value>
                <fullName>Won - Market Access</fullName>
            </value>
            <value>
                <fullName>Won - Referral</fullName>
            </value>
            <value>
                <fullName>Lost - Price</fullName>
            </value>
            <value>
                <fullName>Lost - Competitor</fullName>
            </value>
            <value>
                <fullName>Lost - Regulatory</fullName>
            </value>
            <value>
                <fullName>Lost - No Budget</fullName>
            </value>
            <value>
                <fullName>Lost - Timing</fullName>
            </value>
            <value>
                <fullName>Lost - No Decision</fullName>
            </value>
            <value>
                <fullName>Lost - Market Conditions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>