ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Contract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Date__c</fullName>
    <description>Date when final contract was signed by both parties</description>
    <label>Contract Signed Date</label>
    <type>Date</type>
</CustomField>