ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Days_No_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_No_Activity__c</fullName>
    <description>Auto calculates days since last activity. Triggers no activity warning in Teams.</description>
    <formula>IF(
  ISBLANK(Last_Activity_Date__c),
  0,
  TODAY() - Last_Activity_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days No Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>