ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Deal_Size_Category__c.field-meta.xml
<CustomField>
    <fullName>Deal_Size_Category__c</fullName>
    <formula>IF(Amount &gt;= 1000000, &quot;Mega Deal (&gt;$1M)&quot;,
  IF(Amount &gt;= 500000, &quot;Large Deal (&gt;$500K)&quot;,
    IF(Amount &gt;= 100000, &quot;Mid Deal (&gt;$100K)&quot;,
      &quot;Small Deal&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Size Category</label>
    <type>Text</type>
</CustomField>