ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Investment_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Investment_Amount_USD__c</fullName>
    <description>Actual committed investment amount in USD</description>
    <label>Investment Amount USD</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>