ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Investment_Horizon__c.field-meta.xml
<CustomField>
    <fullName>Investment_Horizon__c</fullName>
    <label>Investment Horizon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short Term (Under 1 Year)</fullName>
            </value>
            <value>
                <fullName>Medium Term (1 to 3 Years)</fullName>
            </value>
            <value>
                <fullName>Long Term (3 Plus Years)</fullName>
            </value>
            <value>
                <fullName>Not Defined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>