ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Investment_Product__c.field-meta.xml
<CustomField>
    <fullName>Investment_Product__c</fullName>
    <label>Investment Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BMV Equities</fullName>
            </value>
            <value>
                <fullName>CETES (Mexican Government Bonds)</fullName>
            </value>
            <value>
                <fullName>Corporate Bonds</fullName>
            </value>
            <value>
                <fullName>Exchange Traded Funds (ETFs)</fullName>
            </value>
            <value>
                <fullName>FX / Peso Hedging</fullName>
            </value>
            <value>
                <fullName>Derivatives (MexDer)</fullName>
            </value>
            <value>
                <fullName>Real Estate Investment Trusts (FIBRAs)</fullName>
            </value>
            <value>
                <fullName>Market Data Feed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>