ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Investor_Type__c.field-meta.xml
<CustomField>
    <fullName>Investor_Type__c</fullName>
    <label>Investor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Institutional Investor</fullName>
            </value>
            <value>
                <fullName>Pension Fund</fullName>
            </value>
            <value>
                <fullName>Sovereign Wealth Fund</fullName>
            </value>
            <value>
                <fullName>Mutual Fund</fullName>
            </value>
            <value>
                <fullName>Family Office</fullName>
            </value>
            <value>
                <fullName>Endowment Fund</fullName>
            </value>
            <value>
                <fullName>Hedge Fund</fullName>
            </value>
            <value>
                <fullName>Insurance Company</fullName>
            </value>
            <value>
                <fullName>Bank / Asset Manager</fullName>
            </value>
            <value>
                <fullName>Broker-Dealer</fullName>
            </value>
            <value>
                <fullName>Registered Investment Advisor (RIA)</fullName>
            </value>
            <value>
                <fullName>Private Equity</fullName>
            </value>
            <value>
                <fullName>Corporate Treasury</fullName>
            </value>
            <value>
                <fullName>High Net Worth Individual (HNWI)</fullName>
            </value>
            <value>
                <fullName>Retail Investor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>