ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>Date of last meeting email or call with investor</description>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>