ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Lead_Source_Record__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Record__c</fullName>
    <description>Original Lead ID for traceability and reporting</description>
    <label>Lead Source Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>