ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Meetings_Count__c.field-meta.xml
<CustomField>
    <fullName>Meetings_Count__c</fullName>
    <description>Total Teams meetings held with investor. Auto incremented by integration.</description>
    <label>Meetings Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>