ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Mexico_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Mexico_Exposure__c</fullName>
    <label>Mexico Exposure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Less than 5%</fullName>
            </value>
            <value>
                <fullName>5% - 15%</fullName>
            </value>
            <value>
                <fullName>15% - 30%</fullName>
            </value>
            <value>
                <fullName>Over 30%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>