ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Regulatory_Approved__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All regulatory approvals obtained from CNBV and SEC</description>
    <label>Regulatory Approved</label>
    <type>Checkbox</type>
</CustomField>