ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Risk_Alert_Sent__c.field-meta.xml
<CustomField>
    <fullName>Risk_Alert_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked after Teams alert has been sent to prevent duplicate notifications. Reset to false when Risk_Flag__c is cleared.</description>
    <label>Risk Alert Sent</label>
    <type>Checkbox</type>
</CustomField>