ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Risk_Flag__c.field-meta.xml
<CustomField>
    <fullName>Risk_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when deal is identified as at risk</description>
    <label>Risk Flag</label>
    <type>Checkbox</type>
</CustomField>