ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Risk_Last_Analyzed__c.field-meta.xml
<CustomField>
    <fullName>Risk_Last_Analyzed__c</fullName>
    <description>Timestamp of when Agentforce last analyzed this opportunity for risk assessment.</description>
    <label>Risk Last Analyzed</label>
    <type>DateTime</type>
</CustomField>