ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <description>Risk level determined by Agentforce analysis. Medium = 7-14 days no activity. High = 15-30 days no activity. Critical = Over 30 days.</description>
    <label>Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>