ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Risk_Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Risk_Next_Action__c</fullName>
    <description>Most important next step recommended by Agentforce for the sales rep to take.</description>
    <label>Risk Next Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>