ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Risk_Personal_Message__c.field-meta.xml
<CustomField>
    <fullName>Risk_Personal_Message__c</fullName>
    <description>Personalized 2 sentence message from Agentforce to the sales rep mentioning investor type and specific situation.</description>
    <label>Risk Personal Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>