ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>Risk_Reason__c</fullName>
    <description>One sentence explanation from Agentforce describing why this opportunity is at risk.</description>
    <label>Risk Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>