ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Risk_Urgency__c.field-meta.xml
<CustomField>
    <fullName>Risk_Urgency__c</fullName>
    <description>Urgency level of the recommended action from Agentforce analysis.</description>
    <label>Risk Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Today</fullName>
            </value>
            <value>
                <fullName>This Week</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>