ClientBMV/Microsoft365/force-app/main/default/objects/Opportunity/fields/Teams_UPN__c.field-meta.xml
<CustomField>
    <fullName>Teams_UPN__c</fullName>
    <description>Owner Microsoft 365 email address. Routes Teams alerts correctly. Must match Microsoft 365 login email.</description>
    <label>Teams UPN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>